--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body>
   <h1>My Website</h1>
-<p> Hi this is Aliza's and Kaif's Website </p>
+<p> Hi this is Aliza's and Kaif's Website :)</p>
 </body>
 
 
