--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <header>
-<title>Aliza'sWebite</title>
+<title>MyWebite</title>
+  
 </header>
 
-
+<link href="style.css" rel=stylesheet" type"text/css">
+                                                       
 <body>
-  <h1>Aliza's Website</h1>
-<p> Hi this is Aliza's and Kaif's Website :)</p>
+  <h1>Personal Portfolio</h1>
+<p>tWelcome to world :)</p>
 </body>
 
 
