--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
                                                        
 <body>
   <h1>Personal Portfolio</h1>
-<p>tWelcome to world :)</p>
+<p>Welcome to world :)</p>
 </body>
 
 
