--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
     
 <h2 style=" font-family:courier ; font-size:70px ; color:red">Cricket</h2>
-    <h3>Raja Ali</h3>
+    <center> <h3>Raja Ali</h3></center>
     
    <p style="color:yellow  "> I am Raja Ali</p>
     <hr>
