--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
     
 <h2 style=" font-family:courier ; font-size:70px ; color:red">Cricket</h2>
-                                <center> <h1 style="color:red">Raja Ali</h1></center>
+    <center> <h1 style="color:red"><b>Raja Ali</b></h1></center>
     
    <p style="color:yellow  "> I am Raja Ali</p>
     <hr>
