--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <br><br><br><br>
 
 <p> This is another paragraph. This is another paragraph. This is another paragraph. This is another paragraph </p>
-<p>This is an image.</p> <img src="sunset.jpg" alt="Kamehame" width="150" height="142">
+<p>This is an image.</p> <img src="images/sunset.jpg" alt="Kamehame" width="150" height="142">
 
     
     
