--- a/index.html
+++ b/index.html
@@ -1,25 +1,39 @@
 <!DOCTYPE html>
 <html>
-<title>RajaAli</title>
+<title>Raja Ali</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
 <style>
-body,h1 {font-family: "Raleway", Arial, sans-serif}
-h1 {letter-spacing: 6px}
-.w3-row-padding img {margin-bottom: 12px}
+
+	body {
+    	background-image: url("images/sunset.jpg");
+    	background-repeat: no-repeat;
+    	background-size: 100% 80%;
+	}
+
+	body,h1 {font-family: "Raleway", Arial, sans-serif}
+	h1 {letter-spacing: 6px}
+	.w3-row-padding img {margin-bottom: 12px}
 </style>
+
+
 <body>
 
 <!-- !PAGE CONTENT! -->
 <div class="w3-content" style="max-width:1500px">
 
 <!-- Header -->
-<header class="w3-panel w3-center w3-opacity" style="padding:128px 16px">
-  <h1 class="w3-xlarge">PHOTOGRAPHER</h1>
-  <h1>John Doe</h1>
+<header class="w3-panel w3-center w3-opacity" style="padding:310px 20px">
+
+  
+
+	<h1 class="w3-xlarge">PHOTOGRAPHER</h1>
+  	<h1><u>Raja Ali</u></h1>
   
   <div class="w3-padding-32">
     <div class="w3-bar w3-border">
@@ -31,26 +45,7 @@ h1 {letter-spacing: 6px}
   </div>
 </header>
 
-<!-- Photo Grid -->
-<div class="w3-row-padding w3-grayscale" style="margin-bottom:128px">
-  <div class="w3-half">
-    <img src="/w3images/wedding.jpg" style="width:100%">
-    <img src="/w3images/rocks.jpg" style="width:100%">
-    <img src="/w3images/falls2.jpg" style="width:100%">
-    <img src="/w3images/paris.jpg" style="width:100%">
-    <img src="/w3images/nature.jpg" style="width:100%">
-    <img src="/w3images/mist.jpg" style="width:100%">
-    <img src="/w3images/paris.jpg" style="width:100%">
-  </div>
 
-  <div class="w3-half">
-    <img src="/w3images/underwater.jpg" style="width:100%">
-    <img src="/w3images/ocean.jpg" style="width:100%">
-    <img src="/w3images/wedding.jpg" style="width:100%">
-    <img src="/w3images/mountainskies.jpg" style="width:100%">
-    <img src="/w3images/rocks.jpg" style="width:100%">
-    <img src="/w3images/underwater.jpg" style="width:100%">
-  </div>
 </div>
   
 <!-- End Page Content -->
