--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <style>
 
 	body {
-    	background-image: url("images/sunset.jpg");
+    	background-image: url("me.jpg");
     	background-repeat: no-repeat;
     	background-size: 100% 80%;
 	}
