partially main web done

--- a/index.html
+++ b/index.html
@@ -22,22 +22,25 @@
 </style>
 
 
+
+<!------------------- START PAGE CONTENT ------------------->
+
 <body>
+
 
 <!-- !PAGE CONTENT! -->
 <div class="w3-content" style="max-width:1500px">
 
 <!-- Header -->
-<header class="w3-panel w3-center w3-opacity" style="padding:310px 20px">
-
+<header class="w3-panel w3-center w3-opacity" style="padding:280px 16px">
+  <h1 class="w3-xlarge">PHOTOGRAPHER</h1>
+  <h1>Raja Ali</h1>
   
 
-	<h1 class="w3-xlarge">PHOTOGRAPHER</h1>
-  	<h1><u>Raja Ali</u></h1>
-  
   <div class="w3-padding-32">
     <div class="w3-bar w3-border">
       <a href="#" class="w3-bar-item w3-button">Home</a>
+
       <a href="#" class="w3-bar-item w3-button w3-light-grey">Portfolio</a>
       <a href="#" class="w3-bar-item w3-button">Contact</a>
       <a href="#" class="w3-bar-item w3-button w3-hide-small">Weddings</a>
@@ -53,12 +56,12 @@
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-large"> 
-  <i class="fa fa-facebook-official w3-hover-opacity"></i>
-  <i class="fa fa-instagram w3-hover-opacity"></i>
+  
+    <a href= "https://www.facebook.com/raja.kashi.71" class="fa fa-facebook-official w3-hover-opacity"></a>
+  <a href= "https://www.instagram.com/rajaali198/?hl=en" class="fa fa-instagram w3-hover-opacity"></a>
   <i class="fa fa-snapchat w3-hover-opacity"></i>
-  <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-  <i class="fa fa-twitter w3-hover-opacity"></i>
-  <i class="fa fa-linkedin w3-hover-opacity"></i>
+  <a href="https://www.linkedin.com/in/raja-ali/" class="fa fa-linkedin w3-hover-opacity"></a>
+
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
 
