All the social media updated

--- a/index.html
+++ b/index.html
@@ -59,8 +59,11 @@
   
     <a href= "https://www.facebook.com/raja.kashi.71" class="fa fa-facebook-official w3-hover-opacity"></a>
   <a href= "https://www.instagram.com/rajaali198/?hl=en" class="fa fa-instagram w3-hover-opacity"></a>
-  <i class="fa fa-snapchat w3-hover-opacity"></i>
-  <a href="https://www.linkedin.com/in/raja-ali/" class="fa fa-linkedin w3-hover-opacity"></a>
+  
+<a href="https://www.linkedin.com/in/raja-ali/" class="fa fa-linkedin w3-hover-opacity"></a>
+
+<a href= "https://github.com/rkali1" class="fa fa-github w3-hover-opacity"></a>
+  
 
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
