--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
 	body,h1 {font-family: "Raleway", Arial, sans-serif}
 	h1 {letter-spacing: 6px}
 	.w3-row-padding img {margin-bottom: 12px}
+
+
+	 .h1{
+position: absolute;
+left: 50%;
+top:50%;
+transform: translateX(-50%) translateY(-50%);
+text-align:center;
+}
+
 </style>
 
 
@@ -28,31 +38,33 @@
 <body>
 
 
-<!-- !PAGE CONTENT! -->
-<div class="w3-content" style="max-width:1500px">
 
-<!-- Header -->
-<header class="w3-panel w3-center w3-opacity" style="padding:280px 16px">
-  <h1 class="w3-xlarge">PHOTOGRAPHER</h1>
-  <h1>Raja Ali</h1>
+
+<header class="w3-panel w3-center w3-opacity" style="padding:300px 16px">
+  	  <h1 class="w3-xlarge">PHOTOGRAPHER</h1>
+  	  <h1>Raja Ali</h1>
   
 
-  <div class="w3-padding-32">
-    <div class="w3-bar w3-border">
-      <a href="#" class="w3-bar-item w3-button">Home</a>
+  	  <div class="w3-padding-32">
+  	  <div class="w3-bar w3-border">
+    	  <a href="#" class="w3-bar-item w3-button">Home</a>
 
-      <a href="#" class="w3-bar-item w3-button w3-light-grey">Portfolio</a>
-      <a href="#" class="w3-bar-item w3-button">Contact</a>
-      <a href="#" class="w3-bar-item w3-button w3-hide-small">Weddings</a>
-    </div>
-  </div>
+    	  <a href="#" class="w3-bar-item w3-button w3-light-grey">Portfolio</a>
+    	  <a href="#" class="w3-bar-item w3-button">Contact</a>
+   	   <a href="#" class="w3-bar-item w3-button w3-hide-small">Weddings</a>
+   	 </div>
+	  </div>
 </header>
+
 
 
 </div>
   
 <!-- End Page Content -->
 </div>
+
+
+
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-large"> 
@@ -65,7 +77,7 @@
 <a href= "https://github.com/rkali1" class="fa fa-github w3-hover-opacity"></a>
   
 
-</footer>
+  
 
 </body>
 </html>
