--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
           
         <!-- Single Hero Slide -->
-        <div class="single-hero-slide bg-img bg-overlay d-flex align-items-center justify-content-center" style="background-image: url(img/bg-img/sunset.jpg);">
+        <div class="single-hero-slide bg-img bg-overlay d-flex align-items-center justify-content-center" style="background-image: url(imgagenot /sunset.jpg);">
             <!-- Post Content -->
             <div class="container">
                 <div class="row">
