--- a/index.html
+++ b/index.html
@@ -1,83 +1,43 @@
 <!DOCTYPE html>
 <html>
-<title>Raja Ali</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-
-<style>
-
-	body {
-    	background-image: url("me.jpg");
-    	background-repeat: no-repeat;
-    	background-size: 100% 80%;
-	}
-
-	body,h1 {font-family: "Raleway", Arial, sans-serif}
-	h1 {letter-spacing: 6px}
-	.w3-row-padding img {margin-bottom: 12px}
-
-
-	 .h1{
-position: absolute;
-left: 50%;
-top:50%;
-transform: translateX(-50%) translateY(-50%);
-text-align:center;
-}
-
-</style>
-
-
-
-<!------------------- START PAGE CONTENT ------------------->
-
-<body>
-
-
-
-
-<header class="w3-panel w3-center w3-opacity" style="padding:300px 16px">
-  	  <h1 class="w3-xlarge">PHOTOGRAPHER</h1>
-  	  <h1>Raja Ali</h1>
+   <title>Raja Ali</title>
+   
+   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+ <style>
+      body{
+	  height:80%;
+      width:100%;
+      background-image:url(me.jpg); 
+      background-repeat:no-repeat;
+      background-size:cover;
+      }
+   </style>
   
-
-  	  <div class="w3-padding-32">
-  	  <div class="w3-bar w3-border">
-    	  <a href="#" class="w3-bar-item w3-button">Home</a>
-
-    	  <a href="#" class="w3-bar-item w3-button w3-light-grey">Portfolio</a>
-    	  <a href="#" class="w3-bar-item w3-button">Contact</a>
-   	   <a href="#" class="w3-bar-item w3-button w3-hide-small">Weddings</a>
-   	 </div>
-	  </div>
-</header>
-
-
-
-</div>
-  
-<!-- End Page Content -->
-</div>
-
-
-
-
-<!-- Footer -->
-<footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-large"> 
-  
-    <a href= "https://www.facebook.com/raja.kashi.71" class="fa fa-facebook-official w3-hover-opacity"></a>
-  <a href= "https://www.instagram.com/rajaali198/?hl=en" class="fa fa-instagram w3-hover-opacity"></a>
-  
-<a href="https://www.linkedin.com/in/raja-ali/" class="fa fa-linkedin w3-hover-opacity"></a>
-
-<a href= "https://github.com/rkali1" class="fa fa-github w3-hover-opacity"></a>
-  
-
-  
-
-</body>
+   <!------------------- START PAGE CONTENT ------------------->
+   <body>
+   
+      <header class="w3-panel w3-center w3-opacity" style="padding:300px 8px">
+         <h1 class="w3-xlarge">PHOTOGRAPHER</h1>
+         <h1>Raja Ali</h1>
+         <div class="w3-padding-32">
+            <div class="w3-bar w3-border">
+               <a href="#" class="w3-bar-item w3-button">Home</a>
+               <a href="#" class="w3-bar-item w3-button w3-light-grey">Portfolio</a>
+               <a href="#" class="w3-bar-item w3-button">Contact</a>
+               <a href="#" class="w3-bar-item w3-button w3-hide-small">Weddings</a>
+            </div>
+         </div>
+      </header>
+      </div>
+      <!-- End Page Content -->
+      </div>
+      <!-- Footer -->
+      <footer class="w3-container w3-padding-10 w3-light-grey w3-center w3-large">
+      <a href= "https://www.facebook.com/raja.kashi.71" class="fa fa-facebook-official w3-hover-opacity"></a>
+      <a href= "https://www.instagram.com/rajaali198/?hl=en" class="fa fa-instagram w3-hover-opacity"></a>
+      <a href="https://www.linkedin.com/in/raja-ali/" class="fa fa-linkedin w3-hover-opacity"></a>
+      <a href= "https://github.com/rkali1" class="fa fa-github w3-hover-opacity"></a>
+   </body>
 </html>
