--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
    <body>
    
       <header class="w3-panel w3-center w3-opacity" style="padding:300px 8px">
-         <h1 class="w3-xlarge">PHOTOGRAPHER</h1>
-         <h1>Raja Ali</h1>
+         <h1 style="color:#ff9900;">PHOTOGRAPHER </h1>
+		 
+         <h1><b>Raja Ali</b></h1>
          <div class="w3-padding-32">
             <div class="w3-bar w3-border">
                <a href="#" class="w3-bar-item w3-button">Home</a>
