--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    <body>
    
       <header class="w3-panel w3-center w3-opacity" style="padding:300px 8px">
-         <h1 style="color:#e60000;">PHOTOGRAPHER </h1>
+	      <h1  style="color:#e60000;"><b>PHOTOGRAPHER </b></h1>
 		 
          <h1><b>Raja Ali</b></h1>
          <div class="w3-padding-32">
