--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    <meta name="viewport" content="width=device-width, initial-scale=1">
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+   
  <style>
       body{
 	  height:80%;
       width:100%;
-      background-image:url(me.jpg); 
+	  background-image:url(me.jpg); 
+	  background-image:opacity:8px; 
       background-repeat:no-repeat;
-      background-size:cover;
+      background-size:cover;	
       }
    </style>
   
@@ -19,7 +22,7 @@
    <body>
    
       <header class="w3-panel w3-center w3-opacity" style="padding:300px 8px">
-	      <h1  style="color:#e60000;"><b>PHOTOGRAPHER </b></h1>
+         <h1 style="color:#e60000;">PHOTOGRAPHER </h1>
 		 
          <h1><b>Raja Ali</b></h1>
          <div class="w3-padding-32">
@@ -34,8 +37,9 @@
       </div>
       <!-- End Page Content -->
       </div>
-      <!-- Footer -->
-      <footer class="w3-container w3-padding-10 w3-light-grey w3-center w3-large">
+      
+	  <!-- Footer -->
+      <footer class="w3-container w3-padding-10 w3-light-grey w3-center w3-xlarge">
       <a href= "https://www.facebook.com/raja.kashi.71" class="fa fa-facebook-official w3-hover-opacity"></a>
       <a href= "https://www.instagram.com/rajaali198/?hl=en" class="fa fa-instagram w3-hover-opacity"></a>
       <a href="https://www.linkedin.com/in/raja-ali/" class="fa fa-linkedin w3-hover-opacity"></a>
