--- a/home.html
+++ b/home.html
@@ -10,11 +10,11 @@
  <style>
       body{
 	  height:80%;
-      width:100%;
+      	  width:100%;
 	  background-image:url(me.jpg); 
 	  background-image:opacity:8px; 
-      background-repeat:no-repeat;
-      background-size:cover;	
+          background-repeat:no-repeat;
+          background-size:cover;	
       }
    </style>
   
@@ -22,15 +22,22 @@
    <body>
    
       <header class="w3-panel w3-center w3-opacity" style="padding:300px 8px">
-         <h1 style="color:#e60000;">PHOTOGRAPHER </h1>
-		 
-         <h1><b>Raja Ali</b></h1>
+         
+
+	<h1  style="color:#e60000; font-family:comic sans MS;" ><font size="7">PHOTOGRAPHER </font></h1>
+	
+        <h1><b>Raja Ali</b></h1>
+
+
+
+
+
          <div class="w3-padding-32">
             <div class="w3-bar w3-border">
-               <a href="#" class="w3-bar-item w3-button">Home</a>
-               <a href="#" class="w3-bar-item w3-button w3-light-grey">Portfolio</a>
-               <a href="#" class="w3-bar-item w3-button">Contact</a>
-               <a href="#" class="w3-bar-item w3-button w3-hide-small">Weddings</a>
+               <a href="home.html" class="w3-bar-item w3-button w3-button  w3-light-grey">Home</a>
+               <a href="portfolio.html" class="w3-bar-item w3-button w3-button ">Portfolio</a>
+               <a href="portraits.html" class="w3-bar-item w3-button w3-button">Portraits</a>
+               <a href="personal.html" class="w3-bar-item w3-button w3-button">Personal</a>
             </div>
          </div>
       </header>
