--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
          </div>
       </header>
       </div>
-      <!-- End Page Content -->
+      <!-- End Page Content --->
       </div>
       
 	  <!-- Footer -->
