--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
 
          <div class="w3-padding-32">
             <div class="w3-bar w3-border">
-               <a href="home.html" class="w3-bar-item w3-button w3-button">Home</a>
+               <a href="index.html" class="w3-bar-item w3-button w3-button">Home</a>
                <a href="portfolio.html" class="w3-bar-item w3-button w3-button   w3-light-grey">Portfolio</a>
                <a href="portraits.html" class="w3-bar-item w3-button w3-button">Portraits</a>
                <a href="personal.html" class="w3-bar-item w3-button w3-button">Personal</a>
