--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
       }
    </style>
   
-   <!------------------- START PAGE CONTENT ------------------->
+   <!-------------------- START PAGE CONTENT ------------------->
    <body>
    
       <header class="w3-panel w3-center w3-opacity" style="padding:300px 8px">
