--- a/portfolio.html
+++ b/portfolio.html
@@ -1,56 +1,84 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+   Visualize by TEMPLATED
+   templated.co @templatedco
+   Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
+   -->
 <html>
-   <title>Raja Ali</title>
-   
-   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">	
-   
- <style>
-      body{
-	  height:80%;
-      	  width:100%;
-	  background-image:url(me.jpg); 
-	  background-image:opacity:8px; 
-          background-repeat:no-repeat;
-          background-size:cover;	
-      }
-   </style>
-  
-   <!-------------------- START PAGE CONTENT ------------------->
+   <head>
+      <title>Gallery</title>
+      <meta charset="utf-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <link rel="stylesheet" href="assets/css/main.css" />
+   </head>
    <body>
-   
-      <header class="w3-panel w3-center w3-opacity" style="padding:300px 8px">
-         
-
-	<h1  style="color:#e60000; font-family:comic sans MS;" ><font size="7">PORTFOLIO </font></h1>
-	
-        <h1><b>Raja Ali</b></h1>
-
-
-
-
-
-         <div class="w3-padding-32">
-            <div class="w3-bar w3-border">
-               <a href="index.html" class="w3-bar-item w3-button w3-button">Home</a>
-               <a href="portfolio.html" class="w3-bar-item w3-button w3-button w3-light-grey">Portfolio</a>
-               <a href="portraits.html" class="w3-bar-item w3-button w3-button">Portraits</a>
-               <a href="personal.html" class="w3-bar-item w3-button w3-button ">Personal</a>
-            </div>
-         </div>
-      </header>
+      <!-- Wrapper -->
+      <div id="wrapper">
+         <!-- Header -->
+         <header id="header">
+            <span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
+            <h1>This is <strong>Visualize</strong>, a responsive site template designed by <a href="http://templated.co">TEMPLATED</a><br />
+               and released for free under the Creative Commons License.
+            </h1>
+            <ul class="icons">
+               <li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
+               <li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
+               <li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
+               <li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li>
+               <li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
+            </ul>
+         </header>
+         <!-- Main -->
+         <section id="main">
+            <!-- Thumbnails -->
+            <section class="thumbnails">
+               <div>
+                  <a href="images/fulls/me1.jpg">
+                     <img src="images/thumbs/me1.jpg" alt="" />
+                     <h3>Lorem ipsum dolor sit amet</h3>
+                  </a>
+                  <a href="images/fulls/02.jpg">
+                     <img src="images/thumbs/02.jpg" alt="" />
+                     <h3>Lorem ipsum dolor sit amet</h3>
+                  </a>
+               </div>
+               <div>
+                  <a href="images/fulls/03.jpg">
+                     <img src="images/thumbs/03.jpg" alt="" />
+                     <h3>Lorem ipsum dolor sit amet</h3>
+                  </a>
+                  <a href="images/fulls/04.jpg">
+                     <img src="images/thumbs/04.jpg" alt="" />
+                     <h3>Lorem ipsum dolor sit amet</h3>
+                  </a>
+                  <a href="images/fulls/05.jpg">
+                     <img src="images/thumbs/05.jpg" alt="" />
+                     <h3>Lorem ipsum dolor sit amet</h3>
+                  </a>
+               </div>
+               <div>
+                  <a href="images/fulls/06.jpg">
+                     <img src="images/thumbs/06.jpg" alt="" />
+                     <h3>Lorem ipsum dolor sit amet</h3>
+                  </a>
+                  <a href="images/fulls/07.jpg">
+                     <img src="images/thumbs/07.jpg" alt="" />
+                     <h3>Lorem ipsum dolor sit amet</h3>
+                  </a>
+               </div>
+            </section>
+         </section>
+         <!-- Footer -->
+         <footer id="footer">
+            <p>&copy; Untitled. All rights reserved. Design: <a href="http://templated.co">TEMPLATED</a>. Demo Images: <a href="http://unsplash.com">Unsplash</a>.</p>
+         </footer>
       </div>
-      <!-- End Page Content -->
-      </div>
-      
-	  <!-- Footer -->
-      <footer class="w3-container w3-padding-10 w3-light-grey w3-center w3-xlarge">
-      <a href= "https://www.facebook.com/raja.kashi.71" class="fa fa-facebook-official w3-hover-opacity"></a>
-      <a href= "https://www.instagram.com/rajaali198/?hl=en" class="fa fa-instagram w3-hover-opacity"></a>
-      <a href="https://www.linkedin.com/in/raja-ali/" class="fa fa-linkedin w3-hover-opacity"></a>
-      <a href= "https://github.com/rkali1" class="fa fa-github w3-hover-opacity"></a>
+      <!-- Scripts -->
+      <script src="assets/js/jquery.min.js"></script>
+      <script src="assets/js/jquery.poptrox.min.js"></script>
+      <script src="assets/js/skel.min.js"></script>
+      <script src="assets/js/main.js"></script>
    </body>
 </html>
+COPY TO CLIPBOARD	 SELECT ALL
+© FreeFormatter.com - FREEFORMATTER is a d/b/a of 10174785 Canada Inc. - Copyright Notice - Privacy Statement - Terms of 
