--- a/portraits.html
+++ b/portraits.html
@@ -46,8 +46,8 @@ body {
 
 		
 <video autoplay  loop id="myVideo">
-  <source src="waterfall.mp4" type="video/mp4">
-   <source src="waterfall.ogg" type="video/ogg">
+  <source src="images/waterfall.mp4" type="video/mp4">
+   <source src="images/waterfall.ogg" type="video/ogg">
 
   Your browser does not support HTML5 video.
 </video>
