update background image

--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
    
  <style>
-      body{
-	  height:80%;
-      	  width:100%;
-	  background-image:url(me.jpg); 
-	  background-image:opacity:8px; 
-          background-repeat:no-repeat;
-          background-size:cover;	
-      }
+      body {
+		background-color: #000;
+		background-image: url("images/sunset.jpg");
+		background-size: cover;
+		background-position: top center;
+	}
    </style>
   
    <!------------------- START PAGE CONTENT ------------------->
