--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       <header class="w3-panel w3-center w3-opacity" style="padding:300px 8px">
          
 
-	<h1  style="color:#e60000; font-family:comic sans MS;" ><font size="7">RAJA ALI </font></h1>
+	<h1  style="color:#e60000; font-family:comic sans MS;" ><font size="7">PERSONAL PORTFOLIO </font></h1>
 	
-        <h1><b>PERSONAL PORTFOLIO</b></h1>
+        <h1><b>RAJA ALI</b></h1>
 
 
 
