--- a/portfolio.html
+++ b/portfolio.html
@@ -24,13 +24,6 @@
 							
 							<!--<a href="http://templated.co">TEMPLATED</a><br /> -->
 						
-						<ul class="icons">
-							<li><a href="#" class="icon style2 fa-twitter" style="color:#ff8000"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon style2 fa-facebook" style="color:#ff8000"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon style2 fa-instagram" style="color:#ff8000"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon style2 fa-500px" style="color:#ff8000"><span class="label">500px</span></a></li>
-							<li><a href="#" class="icon style2 fa-envelope-o" style="color:#ff8000"><span class="label">Email</span></a></li>
-						</ul>
 					</header>
 
 				<!-- Main -->
@@ -90,8 +83,15 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<!--<p>&copy; Untitled. All rights reserved. Design: <a href="http://templated.co">TEMPLATED</a>. Demo Images: <a href="http://unsplash.com">Unsplash</a>.</p> -->
-					</footer>
+<ul class="icons" style="color:	#ff8000">
+							<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li>
+							<li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
+						</ul>
+					</header>
+						<p>&copy; Untitled. All rights reserved. Design: RAJA ALI</a>.</p>					</footer>
 
 			</div>
 
