--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
     </head>
    
 
-	<footer id="header">
+	<footer id="footer">
 						<ul class="icons" style="color:	#ff8000">
   <li><a href="#">Home</a></li>
   <li><a href="#">News</a></li>
@@ -26,7 +26,7 @@
   </ul>
 					
 						
-					</header>
+					</footer>
 
   
     <body id="body" data-spy="scroll" data-target=".header">
