--- a/portfolio.html
+++ b/portfolio.html
@@ -90,7 +90,7 @@ Your browser does not support the video tag.
 
 				<!-- Footer -->
 					<footer id="footer">
-						<ul class="icons">
+						<ul class="icons" style="color:	#ff8000">
 							<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
