--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,14 @@
 						<span class="avatar"><img src="images/me8.jpg" alt="" /></span>
 						<h1>This is <strong>Visualize</strong>, a responsive site template designed by <a href="http://templated.co">TEMPLATED</a><br />
 						and released for free under the Creative Commons License.</h1>
-						
+
+  <ul class="icons" style="color:#ff8000">
+  <li><a href="#">Home</a></li>
+  <li><a href="#">News</a></li>
+  <li><a href="#">Contact</a></li>
+  <li><a href="#">About</a></li>
+  </ul>
+		
 					</header>
 
 				<!-- Main -->
