--- a/portfolio.html
+++ b/portfolio.html
@@ -21,9 +21,9 @@
   <li><a href="#">Contact</a></li>
   <li><a href="#">About</a></li>
   </ul>
-						<h1>This is <strong>Visualize</strong>, a responsive site template designed by <a href="http://templated.co">TEMPLATED</a><br />
-						and released for free under the Creative Commons License.</h1>
-
+	<h1>Look into my <strong style="color:	#ff8000">Portfolio</strong>. 
+<br>
+	<h1>It is where I express my <strong style="color: #ff8000">feelings</strong> and <strong style="color:	#ff8000">emotions</strong>.</h1>
  
 		
 					</header>
