--- a/portfolio.html
+++ b/portfolio.html
@@ -13,10 +13,10 @@
          <header id="header">
             <span class="avatar"><img src="images/me8.jpg" alt="" /></span> 
             <ul class="icons" style="color:#ff8000">
-               <li><a href="#">Home</a></li>
-               <li><a href="#">News</a></li>
-               <li><a href="#">Contact</a></li>
-               <li><a href="#">About</a></li>
+                <li><a href="index.html">Home</a></li>
+               <li><a href="portfolio.html">Portfolio</a></li>
+               <li><a href="portraits.html">Portraits</a></li>
+               <li><a href="personal.html">Personal</a></li>
             </ul>
             <h1>
             Look into my <strong style="color:	#ff8000">Portfolio</strong>. 
