--- a/portfolio.html
+++ b/portfolio.html
@@ -50,9 +50,9 @@
                      <img src="images/thumbs/me5.jpg" alt="" />
                      <h3>"love" is the bridge between you and me</h3>
                   </a>
-                  <a href="images/fulls/05.jpg">
-                     <img src="images/thumbs/05.jpg" alt="" />
-                     <h3>Infinity and beyond</h3>
+                  <a href="images/fulls/me11.jpg">
+                     <img src="images/thumbs/me11.jpg" alt="" />
+                     <h3>"Ye dosti ham nahi chorenge"</h3>
                   </a>
                </div>
                <div>
