--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
 	  
 	  	body {
 		background-color: #000;
-		background-image: url("images/sunset.jpg");
+		background-image: url("images/feather.jpg");
 		background-size: cover;
 		background-position: top center;
 	}
