--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <link rel="stylesheet" href="assets/css/main.css" />
 	  
+	 <style>
+
 	  
+	  	body {
+		background-color: #000;
+		background-image: url("images/sunset.jpg");
+		background-size: cover;
+		background-position: top center;
+	}
+
+   </style>  
 	  
    </head>
    <body>
