--- a/portraits.html
+++ b/portraits.html
@@ -6,6 +6,16 @@
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <link rel="stylesheet" href="assets/css/main.css" />
    </head>
+	
+	<style>
+	  
+	  	body {
+		background-color: #000;
+		background-image: url("images/sunset.jpg");
+		background-size: cover;
+		background-position: top center;
+	}
+   </style>
    <body>
       <!-- Wrapper -->
       <div id="wrapper">
