--- a/portfolio.html
+++ b/portfolio.html
@@ -54,17 +54,27 @@
                   </a>
                </div>
                <div>
-                  <a href="images/fulls/me3.jpg">
-                     <img src="images/thumbs/me3.jpg" alt="" />
-                     <h3>"Keep the chin up, son"</h3>
+                  <a href="images/fulls/me4.jpg">
+                     <img src="images/thumbs/me4.jpg" alt="" />
+                     <h3>There is a kind of serenity in love which is almost a paradise</h3>
+                  </a>
+                  <a href="images/fulls/me12.jpg">
+                     <img src="images/thumbs/me12.jpg" alt="" />
+                     <h3>"Yorkshire is so part of me"</h3>
+                  </a>
+               </div>
+               <div>
+                  <a href="images/fulls/me11.jpg">
+                     <img src="images/thumbs/me11.jpg" alt="" />
+                     <h3>Quite a journey we have travelled, "together"</h3>
                   </a>
                   <a href="images/fulls/me5.jpg">
                      <img src="images/thumbs/me5.jpg" alt="" />
                      <h3>"love" is the bridge between you and me</h3>
                   </a>
-                  <a href="images/fulls/me11.jpg">
-                     <img src="images/thumbs/me11.jpg" alt="" />
-                     <h3>"Ye dosti ham nahi chorenge"</h3>
+                  <a href="images/fulls/me8.jpg">
+                     <img src="images/thumbs/me8.jpg" alt="" />
+                     <h3>Without "you guys" <br> University = Depression</h3>
                   </a>
                </div>
                <div>
