--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                <li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
                <li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
                <li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-               <li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li>
-               <li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
+               <li><a href="#" class="icon style2 fa-github"><span class="label">Github</span></a></li>
+               <li><a href="#" class="icon style2 fa-linkedin"><span class="label">Linkedin</span></a></li>
             </ul>
 			   <!-- Footer -->
          <footer id="footer">
