socialmedia links update

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
             </div>
          </div>
 		 <ul class="icons" style="color:	#ff8000">
-               <li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-               <li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-               <li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-               <li><a href="#" class="icon style2 fa-github"><span class="label">Github</span></a></li>
-               <li><a href="#" class="icon style2 fa-linkedin"><span class="label">Linkedin</span></a></li>
+            <li><a href="https://twitter.com/Kashi8Raja" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
+               <li><a href="https://www.facebook.com/raja.kashi.71" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
+               <li><a href="https://www.instagram.com/rajaali198/" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
+               <li><a href="https://github.com/rkali1" class="icon style2 fa-github"><span class="label">Github</span></a></li>
+               <li><a href="https://www.linkedin.com/in/raja-ali/?lipi=urn%3Ali%3Apage%3Ad_messaging_index%3B1blW8uY5TZmTOXrt%2FCGV3g%3D%3D&licu=urn%3Ali%3Acontrol%3Ad_messaging_index-nav.settings_view_profile" class="icon style2 fa-linkedin"><span class="label">Linkedin</span></a></li>
             </ul>
 			   <!-- Footer -->
          <footer id="footer">
