--- a/portraits.html
+++ b/portraits.html
@@ -41,8 +41,8 @@
                   
                </div>
                <div>
-                  <a href="images/fulls/me.jpg">
-                     <img src="images/thumbs/me.jpg" alt="" />
+                  <a href="images/fulls/waterfall.jpg">
+                     <img src="images/thumbs/waterfall.jpg" alt="" />
                      <h3>"Keep the chin up, son"</h3>
                   </a>
 				  
