--- a/personal.html
+++ b/personal.html
@@ -75,6 +75,17 @@ body, html {
   
   
   
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
     <!-- ************** DIV - MyName - START ************** -->
 
    <a href="images/fulls/me2.jpg">
@@ -95,6 +106,13 @@ body, html {
 <!-- ************** DIV - MyName - START ************** -->
 
    <div class="w3-row">
+   
+    <!-- Hide this text on small devices -->
+    <div class="w3-col m6 w3-hide-small w3-padding-large"><br><br>
+      <p align="left">Welcome to my website. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
+        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </div>
     <a href="images/fulls/me9.jpg">
    
    	<div class="w3-col m6 w3-center w3-padding-large">
@@ -102,13 +120,7 @@ body, html {
     <img src="images/thumbs/me9.jpg" alt="" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333" />
                 </a>
 					</div>
-	<br><br>
-    <!-- Hide this text on small devices -->
-    <div class="w3-col m6 w3-hide-small w3-padding-large">
-      <p>Welcome to my website. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
-        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
+	
   </div>
   <!-- ************** DIV - MyName - ENDS ************** -->
   
@@ -180,7 +192,7 @@ body, html {
     </div>
 
     <div class="w3-col m3">
-       <img src="images/thumbs/me8.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Sailing">
+      <img src "images/thumbs/me8.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Sailing">
     </div>
     <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD MORE</button>
   </div>
