--- a/personal.html
+++ b/personal.html
@@ -7,6 +7,16 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
+
+
+	  
+	  	body {
+		background-color: #000;
+		background-color: #fff4e6;
+		background-size: cover;
+		background-position: top center;
+	}
+   
 body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
 body, html {
     height: 100%;
