--- a/personal.html
+++ b/personal.html
@@ -12,7 +12,7 @@
 	  
 	  	body {
 		background-color: #000;
-		background-color: #fff4e6;
+		background-color: #d9d9d9;
 		background-size: cover;
 		background-position: top center;
 	}
@@ -305,3 +305,4 @@ function toggleFunction() {
 
 </body>
 </html>
+ 
