--- a/personal.html
+++ b/personal.html
@@ -6,10 +6,10 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
 <style>
 
-
-	  
 	  	body {
 		background-color: #000;
 		background-color: #e6e6e6;
@@ -42,6 +42,12 @@ body, html {
     }
 }
 </style>
+
+
+
+<!--************************************BODY STARTS********************************-->
+
+
 <body>
 
 <!-- Navbar (sit on top) -->
@@ -75,13 +81,17 @@ body, html {
 <div class="w3-content w3-container w3-padding-64" id="about">
   <h3 class="w3-center"><b>ABOUT ME</b></h3>
   <p class="w3-center"><em>I love photography</em></p>
-  <p>We have created a fictional "personal" website/blog, and our fictional character is a hobby photographer. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-    qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <p>I use camera to capture and document moments in life, through visual story. 
+  Photography is my favorite way to express myself. My photos give people a chance to see the way I think. 
+  My photos help bring attention to the little things that often get overlooked. 
+  Almost like collaborating thoughts, photography shows people new angles and perspectives on life. 
+  I love presenting my work to people, because my photos are like a peek through my eyes. 
+  My photos show my unique thought process and my interpretation of the world around me. 
+  The exploration of these small moments in time help me to indulge in the moment. 
+  My goal and ultimate feeling of success is drawing other people into that moment aswell. 
   
-  
-  
-  
+  <br>
+ <p align="middle">I am <b>"Raja Ali"</b> and this is me.</p>
   
   
   
@@ -166,19 +176,19 @@ body, html {
   <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <div class="w3-row-padding w3-center">
     <div class="w3-col m3">
-      <img src="images/thumbs/me1.jpg" style="width:100%" "height:100"  onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
+      <img src="images/thumbs/mywork1.jpg" style="width:100%" "height:100"  onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
     </div>
 	
     <div class="w3-col m3">
-      <img src="images/thumbs/me2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Coffee beans">
+      <img src="images/thumbs/mywork2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Coffee beans">
     </div>
 
     <div class="w3-col m3">
-      <img src="images/thumbs/me9.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Bear closeup">
+      <img src="images/thumbs/mywork3.jpeg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Bear closeup">
     </div>
 
     <div class="w3-col m3">
-      <img src="images/thumbs/me4.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Quiet ocean">
+      <img src="images/thumbs/mywork4.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Quiet ocean">
     </div>
   </div>
 
