--- a/personal.html
+++ b/personal.html
@@ -81,7 +81,7 @@ body, html {
 <div class="w3-content w3-container w3-padding-64" id="about">
   <h3 class="w3-center"><b>ABOUT ME</b></h3>
   <p class="w3-center"><em>I love photography</em></p>
-  <p>I use camera to capture and document moments in life, through visual story. 
+  <p>I use the camera to capture and document moments in life, through visual story. 
   Photography is my favorite way to express myself. My photos give people a chance to see the way I think. 
   My photos help bring attention to the little things that often get overlooked. 
   Almost like collaborating thoughts, photography shows people new angles and perspectives on life. 
