--- a/personal.html
+++ b/personal.html
@@ -80,22 +80,24 @@ body, html {
 <!-- Container (About Section) -->
 <div class="w3-content w3-container w3-padding-64" id="about">
   <h3 class="w3-center"><b>ABOUT ME</b></h3>
-  <p class="w3-center"><em>I love photography</em></p>
-  <p>I use the camera to capture and document moments in life, through visual story. 
-  Photography is my favorite way to express myself. My photos give people a chance to see the way I think. 
+  
+   <p style="text-align:center;">Photography is my favorite way to express myself. My photos give people a chance to see the way I think. 
   My photos help bring attention to the little things that often get overlooked. 
   Almost like collaborating thoughts, photography shows people new angles and perspectives on life. 
   I love presenting my work to people, because my photos are like a peek through my eyes. 
   My photos show my unique thought process and my interpretation of the world around me. 
   The exploration of these small moments in time help me to indulge in the moment. 
   My goal and ultimate feeling of success is drawing other people into that moment aswell. 
+  </p>
   
-  <br>
- <p align="middle">I am <b>"Raja Ali"</b> and this is me.</p>
-  
-  
+	 
+  <p align="middle">I am <b>"Raja Ali"</b> and this is me.</p>
+
+ 
   
    
+  
+  
   
   
   
@@ -104,15 +106,22 @@ body, html {
 
    <a href="images/fulls/me2.jpg">
                      <img src="images/thumbs/me2.jpg" alt="" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="900" height="333"/>
-                     <h3>Flannel shirts, denim, Converse sneakers, a guitar, messy hair? That's literally me</h3>
+                       <p class="w3-center">A few fun fact about myself</p>
+
                   </a>
 				  
     <!-- Hide this text on small devices -->
     <div>
-      <p>Welcome to my website. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
-        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
+     
+	 <p style="text-align:center;">(1) I use camera to capture and document moments in life. 
+  (2) I've always wanted to ride a bike but I drive a car. 
+  (3) Both of my arms are fractured.
+  (4) I can do back-flips.
+  (5) My name is <b>Raja</b>, but my friends call me <b>"Rajwinder"</b>.  
+  (6) I am Inject-o-phobic (not a word, but I am scared of injections).
+  (7) Been watching dragon ball since 2000. 
+  </P>
+   </div>
   </div>
   <!-- ************** DIV - MyName - ENDS ************** -->
 
@@ -208,7 +217,6 @@ body, html {
     <div class="w3-col m3">
        <img src="images/thumbs/me8.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Empty ghost train">
     </div>
-    <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD MORE</button>
   </div>
 </div>
 
@@ -221,50 +229,10 @@ body, html {
   </div>
 </div>
 
-<!-- Third Parallax Image with Portfolio Text -->
-<div class="bgimg-3 w3-display-container w3-opacity-min">
-  <div class="w3-display-middle">
-     <span class="w3-xxlarge w3-text-white w3-wide">CONTACT</span>
-  </div>
-</div>
 
-<!-- Container (Contact Section) -->
-<div class="w3-content w3-container w3-padding-64" id="contact">
-  <h3 class="w3-center">WHERE I WORK</h3>
-  <p class="w3-center"><em>I'd love your feedback!</em></p>
 
-  <div class="w3-row w3-padding-32 w3-section">
-    <div class="w3-col m4 w3-container">
-      <img src="/w3images/map.jpg" class="w3-image w3-round" style="width:100%">
-    </div>
-    <div class="w3-col m8 w3-panel">
-      <div class="w3-large w3-margin-bottom">
-        <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Chicago, US<br>
-        <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: +00 151515<br>
-        <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: mail@mail.com<br>
-      </div>
-      <p>Swing by for a cup of <i class="fa fa-coffee"></i>, or leave me a note:</p>
-      <form action="/action_page.php" target="_blank">
-        <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
-          <div class="w3-half">
-            <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
-          </div>
-          <div class="w3-half">
-            <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email">
-          </div>
-        </div>
-        <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
-        <button class="w3-button w3-black w3-right w3-section" type="submit">
-          <i class="fa fa-paper-plane"></i> SEND MESSAGE
-        </button>
-      </form>
-    </div>
-  </div>
-</div>
-
-<!-- Footer -->
+<!-- **********************Footer********************** -->
 <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
-  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <div class="w3-xlarge w3-section">
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
     <i class="fa fa-instagram w3-hover-opacity"></i>
@@ -275,6 +243,12 @@ body, html {
   </div>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
+ 
+ <!-- **********************Footer-ENDS********************** -->
+
+ 
+ 
+ 
  
 <script>
 // Modal Image Gallery
