--- a/personal.html
+++ b/personal.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>About Me</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -8,90 +8,47 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
-<style>
 
-	  	body {
-		background-color: #000;
-		background-color: #e6e6e6;
-		background-size: cover;
-		background-position: top center;
-	}
-   
-body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
-body, html {
-    height: 100%;
-    color: #777;
-    line-height: 1.8;
-}
-
-
-
-/* First image (Logo. Full height) */
-.bgimg-1 {
-    background-image: url('/w3images/parallax1.jpg');
-    min-height: 100%;
-}
-
-
-
-/* Turn off parallax scrolling for tablets and phones */
-@media only screen and (max-device-width: 1600px) {
-    .bgimg-1, .bgimg-2, .bgimg-3 {
-        background-attachment: scroll;
-        min-height: 400px;
-    }
-}
-</style>
-
-
-
+ <head>
+      <meta charset="utf-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <link rel="stylesheet" href="assets/css/main.css" />
+   </head>
+   <header id="header">
+            <ul class="icons" style="color:#ff8000">
+               <li><a href="index.html">Home</a></li>
+               <li><a href="portfolio.html">Portfolio</a></li>
+               <li><a href="portraits.html">Portraits</a></li>
+               <li><a href="personal.html">Personal</a></li>
+            </ul>
+            <h1>
+            Look into my <strong style="color:	#ff8000">Portfolio</strong>. 
+            <br>
+            <h1>It is where I express my <strong style="color: #ff8000">feelings</strong> and <strong style="color:	#ff8000">emotions</strong>.</h1>
+         </header>
 <!--************************************BODY STARTS********************************-->
 
 
 <body>
-
-<!-- Navbar (sit on top) -->
-<div class="w3-top">
-  <div class="w3-bar" id="myNavbar">
-    <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
-      <i class="fa fa-bars"></i>
-    </a>
-    <a href="#home" class="w3-bar-item w3-button">HOME</a>
-    <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT</a>
-    <a href="#portfolio" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> PORTFOLIO</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> CONTACT</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
-      <i class="fa fa-search"></i>
-    </a>
-  </div>
-
-  <!-- Navbar on small screens -->
-  <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
-    <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT</a>
-    <a href="#portfolio" class="w3-bar-item w3-button" onclick="toggleFunction()">PORTFOLIO</a>
-    <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT</a>
-    <a href="#" class="w3-bar-item w3-button">SEARCH</a>
-  </div>
-</div>
 
 
 
 
 <!-- Container (About Section) -->
 <div class="w3-content w3-container w3-padding-64" id="about">
-  <h3 class="w3-center"><b>ABOUT ME</b></h3>
+  <h3 class="w3-center"><font size="6"><b>ABOUT ME</b></font></h3>
   
-   <p style="text-align:center;">Photography is my favorite way to express myself. My photos give people a chance to see the way I think. 
+   <p style="text-align:center;"><font size="4">Photography is my favorite way to express myself. My photos give people a chance to see the way I think. 
   My photos help bring attention to the little things that often get overlooked. 
   Almost like collaborating thoughts, photography shows people new angles and perspectives on life. 
   I love presenting my work to people, because my photos are like a peek through my eyes. 
   My photos show my unique thought process and my interpretation of the world around me. 
   The exploration of these small moments in time help me to indulge in the moment. 
   My goal and ultimate feeling of success is drawing other people into that moment aswell. 
-  </p>
+  </font></p>
   
 	 
-  <p align="middle">I am <b>"Raja Ali"</b> and this is me.</p>
+  <p align="middle">I am <font size="4"><b>"Raja Ali"</b> and this is me.</font></p>
 
  
   
@@ -106,21 +63,21 @@ body, html {
 
    <a href="images/fulls/me2.jpg">
                      <img src="images/thumbs/me2.jpg" alt="" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="900" height="333"/>
-                       <p class="w3-center">A few fun fact about myself</p>
+                       <p class="w3-center"><i><font size="4">A few fun fact about myself</i></font></p>
 
                   </a>
 				  
     <!-- Hide this text on small devices -->
     <div>
      
-	 <p style="text-align:center;">(1) I use camera to capture and document moments in life. 
+	 <p style="text-align:center;"><font size="4">(1) I use camera to capture and document moments in life. 
   (2) I've always wanted to ride a bike but I drive a car. 
   (3) Both of my arms are fractured.
   (4) I can do back-flips.
   (5) My name is <b>Raja</b>, but my friends call me <b>"Rajwinder"</b>.  
   (6) I am Inject-o-phobic (not a word, but I am scared of injections).
   (7) Been watching dragon ball since 2000. 
-  </P>
+  </font></P>
    </div>
   </div>
   <!-- ************** DIV - MyName - ENDS ************** -->
@@ -259,26 +216,9 @@ function onClick(element) {
   captionText.innerHTML = element.alt;
 }
 
-// Change style of navbar on scroll
-window.onscroll = function() {myFunction()};
-function myFunction() {
-    var navbar = document.getElementById("myNavbar");
-    if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
-        navbar.className = "w3-bar" + " w3-card" + " w3-animate-top" + " w3-white";
-    } else {
-        navbar.className = navbar.className.replace(" w3-card w3-animate-top w3-white", "");
-    }
-}
 
-// Used to toggle the menu on small screens when clicking on the menu button
-function toggleFunction() {
-    var x = document.getElementById("navDemo");
-    if (x.className.indexOf("w3-show") == -1) {
-        x.className += " w3-show";
-    } else {
-        x.className = x.className.replace(" w3-show", "");
-    }
-}
+
+
 </script>
 
 </body>
