--- a/personal.html
+++ b/personal.html
@@ -89,9 +89,19 @@
    
     <!-- Hide this text on small devices -->
     <div class="w3-col m6 w3-hide-small w3-padding-large"><br><br>
-      <p align="left">Welcome to my website. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
-        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p align="left">
+	  ………………………………………………………………………………………………………………………………
+………………………………………………………………
+………………………………………………………………
+………………………………………………………………………………………………………………………………
+………………………………………………………………
+………………………………………………………………
+
+………………………………………………………………………………………………………………………………
+………………………………………………………………
+………………………………………………………………
+
+</p>
     </div>
     <a href="images/fulls/me9.jpg">
    
@@ -120,9 +130,20 @@
 	<br><br>
     <!-- Hide this text on small devices -->
     <div class="w3-col m6 w3-hide-small w3-padding-large">
-      <p>Welcome to my website. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
-        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p>………………………………………………………………………………………………………………………………
+………………………………………………………………
+………………………………………………………………
+………………………………………………………………………………………………………………………………
+………………………………………………………………
+………………………………………………………………
+
+………………………………………………………………………………………………………………………………
+………………………………………………………………
+………………………………………………………………
+
+
+
+</p>
     </div>
   </div>
   <!-- ************** DIV - MyName - ENDS ************** -->
