--- a/personal.html
+++ b/personal.html
@@ -8,10 +8,9 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <style>
-	  
-	  	body {
-		background-color:#b35900;
-		background-size: cover;
+	    	body {
+		background-color: #b35900;
+		background-color: #b35900;;
 		background-position: top center;
 	}
    </style>
