--- a/personal.html
+++ b/personal.html
@@ -1,6 +1,6 @@
 	<!DOCTYPE html>
 	<html>
-	<title>W3.CSS Template</title>
+	<title>Personal</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -8,7 +8,8 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <style>
-	    	body {
+	  
+	  	body {
 		background-color: #b35900;
 		background-color: #b35900;;
 		background-position: top center;
@@ -37,7 +38,6 @@
 
 
 	<body>
-
 
 
 
