--- a/personal.html
+++ b/personal.html
@@ -9,10 +9,11 @@
 
 <style>
 	  
-	  	
+	  body {
 		background-color: #b35900;
 		background-color: #b35900;;
 		background-position: top center;
+	}
 
    </style>
   
