--- a/personal.html
+++ b/personal.html
@@ -69,7 +69,7 @@
 	  
 		<!-- ************** DIV - MyName - START ************** -->
 
-	   <a href="images/fulls/me2.jpg">
+	   <a href="images/personal.jpg">
 						 <img src="images/thumbs/me2.jpg" alt="" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="900" height="333"/>
 						   <p class="w3-center"><i><font size="4">A few fun fact about myself</i></font></p>
 
