--- a/personal.html
+++ b/personal.html
@@ -9,12 +9,11 @@
 
 <style>
 	  
-	  body {
+	  	body {
 		background-color: #b35900;
 		background-color: #b35900;;
 		background-position: top center;
 	}
-
    </style>
   
 
@@ -39,8 +38,6 @@
 
 
 	<body>
-
-
 
 	<!-- Container (About Section) -->
 	<div class="w3-content w3-container w3-padding-64" id="about">
@@ -69,22 +66,32 @@
 	  
 		<!-- ************** DIV - MyName - START ************** -->
 
-	   <a href="images/fulls/me2.jpg">
-						 <img src="images/fulls/me2.jpg" alt="" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="900" height="333"/>
-						   <p class="w3-center"><i><font size="4">A few fun fact about myself</i></font></p>
 
-					  </a>
-					  
+<!--<a>	
+   <img src="images/thumbs/me2.jpg" alt="" class="w3-round w3-image w3-opacity w3-hover-opacity-off"  onclick="onClick(this)"  class="w3-hover-opacity" alt="Photo of Me" width="900" height="333"/>
+	   <p class="w3-center"><i><font size="4">A few fun fact about myself</i></font></p>
+       </a>
+	-->
+	
+	
+	<div class="w3-row-padding w3-center w3-section">
+		   <img src="images/personal.jpg"   align="middle" width="800"  height="550" onclick="onClick(this)" class="w3-hover-opacity" alt="Empty ghost train">
+		</div>
+
 		<!-- Hide this text on small devices -->
 		<div>
-		 
-		 <p style="text-align:center;"><font size="4">(1) I use camera to capture and document moments in life. 
-	  (2) I've always wanted to ride a bike but I drive a car. 
+		 <p align="middle"><font size="4"><i><b>few fun facts about me:</b></i></font></p>
+		
+		<p style="text-align:center;"><font size=4">
+	  (1) My <b>"smile"</b> is brighter than my future.
+	  (2)I use the camera to capture and document moments in life. 
 	  (3) Both of my arms are fractured.
 	  (4) I can do back-flips.
 	  (5) My name is <b>Raja</b>, but my friends call me <b>"Rajwinder"</b>.  
 	  (6) I am Inject-o-phobic (not a word, but I am scared of injections).
-	  (7) Been watching dragon ball since 2000. 
+	  (7) I've always wanted to ride a bike but I drive a car. 
+	  (8) Been watching dragon ball since I was 5. 
+	  
 	  </font></P>
 	   </div>
 	  </div>
