--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
       <link rel="stylesheet" href="assets/css/main.css" />
 	  
  <style>
-
 	  
 	  	body {
 		background-color: #000;
@@ -21,7 +20,6 @@
 		background-size: cover;
 		background-position: top center;
 	}
-
    </style>
   
    <!------------------- START PAGE CONTENT ------------------->
@@ -30,7 +28,7 @@
       <header class="w3-panel w3-center w3-opacity" style="padding:300px 8px">
          
 
-	<h1  style="color:#e60000; font-family:comic sans MS;" ><font size="7">PHOTOGRAPHER</font></h1>
+	<h1  class="serif" style="color:#e60000" ;font size="7">PHOTOGRAPHER</font></h1>
 	
         <h1><b>Raja Ali</b></h1>
 
@@ -47,11 +45,11 @@
             </div>
          </div>
 		 <ul class="icons" style="color:	#ff8000">
-            <li><a href="https://twitter.com/Kashi8Raja" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-               <li><a href="https://www.facebook.com/raja.kashi.71" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-               <li><a href="https://www.instagram.com/rajaali198/" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-               <li><a href="https://github.com/rkali1" class="icon style2 fa-github"><span class="label">Github</span></a></li>
-               <li><a href="https://www.linkedin.com/in/raja-ali/?lipi=urn%3Ali%3Apage%3Ad_messaging_index%3B1blW8uY5TZmTOXrt%2FCGV3g%3D%3D&licu=urn%3Ali%3Acontrol%3Ad_messaging_index-nav.settings_view_profile" class="icon style2 fa-linkedin"><span class="label">Linkedin</span></a></li>
+               <li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
+               <li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
+               <li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
+               <li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li>
+               <li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
             </ul>
 			   <!-- Footer -->
          <footer id="footer">
