--- a/index.html
+++ b/index.html
@@ -11,16 +11,28 @@
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <link rel="stylesheet" href="assets/css/main.css" />
+<link href="https://fonts.googleapis.com/css?family=Aclonica" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Stalemate" rel="stylesheet">
+
 	  
  <style>
-	  
 	  	body {
 		background-color: #000;
 		background-image: url("images/sunset.jpg");
 		background-size: cover;
 		background-position: top center;
+	}	
+		
+		h1.photographer{
+font-family: 'Aclonica', sans-serif;
+		color:red;
 	}
-   </style>
+	
+	h1.RajaAli{
+font-family: 'Stalemate', cursive;
+	}
+	
+      </style>
   
    <!------------------- START PAGE CONTENT ------------------->
    <body>
@@ -28,13 +40,9 @@
       <header class="w3-panel w3-center w3-opacity" style="padding:300px 8px">
          
 
-	<h1  class="serif" style="color:#e60000" ;font size="7">PHOTOGRAPHER</font></h1>
+	<h1 class="photographer"><font size="11">PHOTOGRAPHER</font></h1>
 	
-        <h1><b>Raja Ali</b></h1>
-
-
-
-
+        <h1  class="RajaAli" ><font size="50"><b>Raja Ali</b></font></h1>
 
          <div class="w3-padding-32">
             <div class="w3-bar w3-border">
