--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@
 	}	
 		
 		h1.photographer{
-font-family: 'Aclonica', sans-serif;
-		color:red;
+		font-family: 'Aclonica', sans-serif;
+		color:#cc0000;
 	}
 	
-	h1.RajaAli{
-font-family: 'Stalemate', cursive;
-	}
+		h1.RajaAli{
+		font-family: 'Stalemate', cursive;
+		color:#ff6600;
+	 }
 	
       </style>
   
@@ -42,8 +43,9 @@ font-family: 'Stalemate', cursive;
 
 	<h1 class="photographer"><font size="11">PHOTOGRAPHER</font></h1>
 	
-        <h1  class="RajaAli" ><font size="50"><b>Raja Ali</b></font></h1>
+        <h1  class="RajaAli"><font size="50"><b>Raja Ali</b></font></h1>
 
+		
          <div class="w3-padding-32">
             <div class="w3-bar w3-border">
                <a href="index.html" class="w3-bar-item w3-button w3-button  w3-light-grey">Home</a>
