--- a/portfolio.html
+++ b/portfolio.html
@@ -40,9 +40,9 @@
             <!-- Thumbnails -->
             <section class="thumbnails">
             <div>
-                  <a href="images/fulls/me1.jpg">
-                     <img src="images/thumbs/me1.jpg" alt="" />
-                     <h3>Call me maybe?</h3>
+                  <a href="images/fulls/bigben.jpg">
+                     <img src="images/thumbs/bigben.jpg" alt="" />
+                     <h3>The Wheel</h3>
                   </a>
                   <a href="images/fulls/me4.jpg">
                      <img src="images/thumbs/me4.jpg" alt="" />
