--- a/portfolio.html
+++ b/portfolio.html
@@ -40,8 +40,8 @@
             <!-- Thumbnails -->
             <section class="thumbnails">
             <div>
-                  <a href="images/fulls/bigben.jpg">
-                     <img src="images/thumbs/bigben.jpg" alt="" />
+                  <a href="images/fulls/londoneye.jpg">
+                     <img src="images/thumbs/londoneye.jpg" alt="" />
                      <h3>The Wheel</h3>
                   </a>
                   <a href="images/fulls/me4.jpg">
