--- a/portraits.html
+++ b/portraits.html
@@ -27,11 +27,8 @@
                <li><a href="portraits.html">Portraits</a></li>
                <li><a href="personal.html">Personal</a></li>
             </ul>
-            <h1>
-            Look into my <strong style="color:	#ff8000">Portfolio</strong>. 
-            <br>
-            <h1>It is where I express my <strong style="color: #ff8000">feelings</strong> and <strong style="color:	#ff8000">emotions</strong>.</h1>
-         </header>
+            <h1>The face is the <strong style="color:#ff8000">Soul</strong>of the body</h1> 
+           </header>
          <!-- Main -->
          <section id="main">
             <!-- Thumbnails -->
