--- a/personal.html
+++ b/personal.html
@@ -114,7 +114,7 @@
 
 	</p>
 		</div>
-		<a href="images/fulls/me9.jpg">
+		<a href="images/fulls/work1.jpg">
 	   
 		<div class="w3-col m6 w3-center w3-padding-large">
 		<p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br>
