--- a/personal.html
+++ b/personal.html
@@ -113,7 +113,7 @@
 	………………………………………………………………
 
 	</p>
-		</div>
+		<div>
 		<a href="images/fulls/work1.jpg">
 	   
 		<div class="w3-col m6 w3-center w3-padding-large">
