--- a/personal.html
+++ b/personal.html
@@ -113,12 +113,12 @@
 	………………………………………………………………
 
 	</p>
-		<div>
-		<a href="images/fulls/work1.jpg">
+		</div>
+		<a href="images/fulls/me9.jpg">
 	   
 		<div class="w3-col m6 w3-center w3-padding-large">
 		<p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br>
-		<img src="images/thumbs/work1.jpg" alt="" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333" />
+		<img src="images/thumbs/me9.jpg" alt="" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333" />
 					</a>
 						</div>
 		
