--- a/personal.html
+++ b/personal.html
@@ -114,11 +114,11 @@
 
 	</p>
 		</div>
-		<a href="images/fulls/me9.jpg">
+		<a href="images/fulls/intial.jpg">
 	   
 		<div class="w3-col m6 w3-center w3-padding-large">
 		<p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br>
-		<img src="images/thumbs/initial.jpg" alt="" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333" />
+		<img src="images/thumbs/intial.jpg" alt="" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333" />
 					</a>
 						</div>
 		
